# Manglex

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
Frameworks/SudachiFFI.xcframework/: Info.plist
Frameworks/SudachiFFI.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap  sudachi_ios.h
Manglex/: Main.swift  Manglex-Bridging-Header.h
Manglex.xcodeproj/: project.pbxproj
Manglex.xcodeproj/xcshareddata/xcschemes/: Manglex.xcscheme
Manglex/Dictionary/: JMDictAnalyzer.swift  JMDictCheckView.swift  JMDictFormatter.swift
Manglex/Dictionary/Models/: SudachiTypes.swift
Manglex/Dictionary/Services/: POSColorScheme.swift  RomajiConverter.swift  SudachiBridge.swift  SudachiTest.swift  SudachiTokenizer.swift
Manglex/Views/: ContentView.swift  EmptyStateView.swift  GrammarCheckView.swift  ImagePicker.swift  LiveTextView.swift  MorphologyBreakdownView.swift  OCRViewModel.swift  WordDetailView.swift
SudachiFFI/: Cargo.toml  README.md  build.sh  cbindgen.toml
SudachiFFI/src/: lib.rs
